log
Thu, Mar 20, 2025  6:06:16 PM: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
3f6cb15
do., 23 de mar. de 2025 20:16:14: 
 tests:  1|4
total_score: 10/70
53e58b0
do., 23 de mar. de 2025 21:20:04: 
 exercises.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:24: error: implicit declaration of function 'firts' [-Werror=implicit-function-declaration]
       suma += *(int *) firts(L);
                        ^~~~~
exercises.c: In function 'eliminaElementos':
exercises.c:77:10: error: implicit declaration of function 'firt' [-Werror=implicit-function-declaration]
    while(firt(L) != NULL){
          ^~~~
exercises.c:77:18: error: comparison between pointer and integer [-Werror]
    while(firt(L) != NULL){
                  ^~
exercises.c:80:10: error: expected '}' before 'else'
          else{
          ^~~~
exercises.c: At top level:
exercises.c:85:1: error: expected identifier or '(' before '}' token
 }
 ^
exercises.c: In function 'copia_pila':
exercises.c:95:11: error: unused variable 'aux' [-Werror=unused-variable]
    Stack *aux = create_stack();
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
faa94f9
do., 23 de mar. de 2025 21:20:41: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:24: error: implicit declaration of function 'firts' [-Werror=implicit-function-declaration]
       suma += *(int *) firts(L);
                        ^~~~~
exercises.c: In function 'eliminaElementos':
exercises.c:77:10: error: implicit declaration of function 'firt' [-Werror=implicit-function-declaration]
    while(firt(L) != NULL){
          ^~~~
exercises.c:77:18: error: comparison between pointer and integer [-Werror]
    while(firt(L) != NULL){
                  ^~
exercises.c:80:10: error: expected '}' before 'else'
          else{
          ^~~~
exercises.c: At top level:
exercises.c:85:1: error: expected identifier or '(' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3081d80
do., 23 de mar. de 2025 21:21:26: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:24: error: implicit declaration of function 'firts' [-Werror=implicit-function-declaration]
       suma += *(int *) firts(L);
                        ^~~~~
exercises.c: In function 'eliminaElementos':
exercises.c:80:10: error: expected '}' before 'else'
          else{
          ^~~~
exercises.c: At top level:
exercises.c:85:1: error: expected identifier or '(' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ef09730
